1.0.2 release notes
1, Support jdk1.8.
2, Retry connection will check ConnectHandler done already or status is still conneting to avoid dummy loop for reconnection.